--- a/index.html
+++ b/index.html
@@ -9,10 +9,12 @@
 <head>
     <meta charset="utf-8">
     <!--[if IE]> <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> <![endif]-->
-    <title>Portal Rutledge</title>
-    <meta name="description" content="">
+    <title>Photo-Hub an Photo Gallery Category Flat Bootstarp responsive Website Template| Home :: w3layouts</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/png" href="assets/img/favicon.ico" />
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<meta name="keywords" content="Photo-Hub Responsive web template, Bootstrap Web Templates, Flat Web Templates, Andriod Compatible web template, 
+Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, SonyErricsson, Motorola web design" />
+    <!-- <link rel="icon" type="image/png" href="assets/img/favicon.ico" /> -->
     <link rel="stylesheet" type="text/css" href="assets/css/lib/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/lib/datetimepicker/datetimepicker.css" />
     <link rel="stylesheet" type="text/css" href="assets/css/lib/jquery.dataTables.min.css">
@@ -21,9 +23,23 @@
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
     <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/angular-ui-notification.css">
+
+
+
+<script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
+<link href="web/css/bootstrap.css" rel='stylesheet' type='text/css' />
+<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
+<!-- Custom Theme files -->
+<link href="web/css/style.css" rel='stylesheet' type='text/css' />
+<!-- Custom Theme files -->
+<!--webfont-->
+<link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
+<link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
+<script type="text/javascript" src="web/js/jquery-1.11.1.min.js"></script>
+<script src="web/js/menu_jquery.js"></script>
 </head>
 
-<body ng-app="peopleIotApp">
+<body ng-app="myApp">
     <div ui-view="login"></div>
     <div ui-view="register"></div>
     <div ui-view="header"></div>
@@ -51,11 +67,7 @@
     <script type="text/javascript" src="assets/js/lib/angular-md5.js"></script>
     <script type="text/javascript" src="/app/components/login/loginController.js"></script>
     <script type="text/javascript" src="/app/shared/headerController.js"></script>
-    <script type="text/javascript" src="/app/components/services/serviceController.js"></script>
-    <!-- new js -->
     <!-- end -->
-    <!-- new canvas controller -->
-    <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
     
 </body>
 
