--- a/source/app/shared/content.html
+++ b/source/app/shared/content.html
@@ -1,5 +1,101 @@
-<br>
-<br>
-<br>
-<br>
-<br>
+<div class="banner">
+		<div class="container">
+			<div class="span_1_of_1">
+			    <h2>Photos, illustrations by<br> Creatives all over the world.</h2>
+			    <div class="search">
+			      <ul class="nav1">
+		            <li id="search">
+						<form action="" method="get">
+							<input type="text" name="search_text" id="search_text" placeholder="Search"/>
+							<input type="button" name="search_button" id="search_button">
+						</form>
+					</li>
+					<li id="options">
+						<a href="#">All Images</a>
+						<ul class="subnav">
+							<li><a href="#">Photography</a></li>
+							<li><a href="#">Illustrations</a></li>
+							<li><a href="#">Vector</a></li>
+						</ul>
+					</li>
+	              </ul>
+	            </div>
+			</div>
+		</div>
+	</div>
+	<div class="grid_1">
+		<h3>Over 42 Million Stock Images, Vectors, Footage and Audio Clips</h3>
+		<div class="col-md-2 col_1">
+			<h4>Gym</h4>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/g1.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/g2.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/g3.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/g4.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/g5.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<h4>Food</h4>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/f1.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic9.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/f2.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/f3.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/f4.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<h4>Wedding</h4>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/w1.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic15.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/w2.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/w3.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/w4.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<h4>People</h4>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic20.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic21.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic22.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic23.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="col-md-2 col_1">
+			<img src="web/images/pic24.jpg" class="img-responsive" alt=""/>
+		</div>
+		<div class="clearfix"> </div>
+	</div>
