--- a/index.html
+++ b/index.html
@@ -67,6 +67,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="assets/js/lib/angular-md5.js"></script>
     <script type="text/javascript" src="/app/components/login/loginController.js"></script>
     <script type="text/javascript" src="/app/shared/headerController.js"></script>
+    <script type="text/javascript" src="/app/components/register/registerController.js"></script>
     <!-- end -->
     
 </body>
