--- a/source/app/shared/header.html
+++ b/source/app/shared/header.html
@@ -5,28 +5,8 @@
          </div>
          <div class="top_right">
            <ul>
-            <li><a href="register.html">Register</a></li>|
-            <li class="login" >
-                 <div id="loginContainer"><a href="#" id="loginButton"><span>Login</span></a>
-                      <div id="loginBox">                
-                          <form id="loginForm">
-                            <fieldset id="body">
-                                <fieldset>
-                                      <label for="email">Email Address</label>
-                                      <input type="text" name="email" id="email">
-                                </fieldset>
-                                <fieldset>
-                                        <label for="password">Password</label>
-                                        <input type="password" name="password" id="password">
-                                 </fieldset>
-                                <input type="submit" id="login" value="Sign in">
-                                <label for="checkbox"><input type="checkbox" id="checkbox"> <i>Remember me</i></label>
-                            </fieldset>
-                             <span><a href="#">Forgot your password?</a></span>
-                           </form>
-                        </div>
-                  </div>
-              </li>
+            <li><a href="#/register">Register</a></li>|
+            <li class="login" ><a href="#/login">Login</a></li>
            </ul>
          </div>
          <div class="clearfix"></div>
