--- a/index.html
+++ b/index.html
@@ -68,6 +68,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="/app/components/login/loginController.js"></script>
     <script type="text/javascript" src="/app/shared/headerController.js"></script>
     <script type="text/javascript" src="/app/components/register/registerController.js"></script>
+     <script type="text/javascript" src="/app/components/gallery/galleryController.js"></script>
+     <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
     <!-- end -->
     
 </body>
