--- a/index.html
+++ b/index.html
@@ -21,22 +21,20 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <link rel="stylesheet" type="text/css" href="assets/css/lib/font-awesome.min.css">
     <link rel="stylesheet" type="text/css" href="assets/css/lib/countrySelect.min.css">
     <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Open+Sans+Condensed:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800">
-    <link rel="stylesheet" type="text/css" href="assets/css/main.css">
     <link rel="stylesheet" type="text/css" href="assets/css/angular-ui-notification.css">
 
 
 
 <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
-<link href="web/css/bootstrap.css" rel='stylesheet' type='text/css' />
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <!-- Custom Theme files -->
-<link href="web/css/style.css" rel='stylesheet' type='text/css' />
+<link href="assets/css/style.css" rel='stylesheet' type='text/css' />
+<link href="assets/css/custom.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
 <!--webfont-->
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
-<script type="text/javascript" src="web/js/jquery-1.11.1.min.js"></script>
-<script src="web/js/menu_jquery.js"></script>
+
 </head>
 
 <body ng-app="myApp">
@@ -70,6 +68,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="/app/components/register/registerController.js"></script>
      <script type="text/javascript" src="/app/components/gallery/galleryController.js"></script>
      <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
+     <script type="text/javascript" src="/app/components/upload/uploadController.js"></script>
     <!-- end -->
     
 </body>
