add modal upload

--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <!-- Custom Theme files -->
 <link href="assets/css/style.css" rel='stylesheet' type='text/css' />
 <link href="assets/css/custom.css" rel='stylesheet' type='text/css' />
+<link href="assets/upload/css/fileinput.min.css" rel='stylesheet' type='text/css' />
 <!-- Custom Theme files -->
 <!--webfont-->
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
@@ -66,9 +67,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="/app/components/login/loginController.js"></script>
     <script type="text/javascript" src="/app/shared/headerController.js"></script>
     <script type="text/javascript" src="/app/components/register/registerController.js"></script>
-     <script type="text/javascript" src="/app/components/gallery/galleryController.js"></script>
-     <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
-     <script type="text/javascript" src="/app/components/upload/uploadController.js"></script>
+    <script type="text/javascript" src="/app/components/gallery/galleryController.js"></script>
+    <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
+    <script type="text/javascript" src="/app/components/upload/uploadController.js"></script>
+    <script type="text/javascript" src="assets/upload/js/fileinput.min.js"></script>
     <!-- end -->
     
 </body>
