--- a/index.html
+++ b/index.html
@@ -36,6 +36,17 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 <link href='http://fonts.googleapis.com/css?family=Quicksand:300,400,700' rel='stylesheet' type='text/css'>
 <link href='http://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700,800' rel='stylesheet' type='text/css'>
 
+
+ 
+    <link rel="stylesheet" href="assets/js/select.css">
+
+    <!-- <script src="./demo.js"></script> -->
+
+    <!-- themes -->
+    <link rel="stylesheet" href="https://netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/select2/3.4.5/select2.css">    
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/selectize.js/0.8.5/css/selectize.default.css">
+
 </head>
 
 <body ng-app="myApp">
@@ -51,6 +62,10 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="assets/js/lib/countrySelect.min.js"></script>
     <script type="text/javascript" src="assets/js/lib/moment.js"></script>
     <script type="text/javascript" src="assets/js/lib/angular.min.js"></script>
+     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.0/angular-sanitize.js"></script>
+
+    <!-- ui-select files -->
+    <script src="assets/js/select.js"></script>
     <script type="text/javascript" src="assets/js/lib/angular-ui-router.min.js"></script>
     <script type="text/javascript" src="assets/js/lib/socket.io-1.2.0.js"></script>
     <script type="text/javascript" src="assets/js/lib/datetimepicker/datetimepicker.js"></script>
