--- a/index.html
+++ b/index.html
@@ -86,6 +86,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="/app/components/profile/profileController.js"></script>
     <script type="text/javascript" src="/app/components/upload/uploadController.js"></script>
     <script type="text/javascript" src="assets/upload/js/fileinput.min.js"></script>
+    <script type="text/javascript" src="assets/js/checklist-model.js"></script>
     <!-- end -->
     
 </body>
