show tags image

--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
     <script type="text/javascript" src="/app/components/upload/uploadController.js"></script>
     <script type="text/javascript" src="assets/upload/js/fileinput.min.js"></script>
     <script type="text/javascript" src="assets/js/checklist-model.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/underscore.js/1.8.3/underscore.js"></script>
     <!-- end -->
     
 </body>
